@startuml UML_Diagrama_de_Clases
skinparam monochrome true
title Diagrama de Clases del Dominio\nSistema Web y Electromecánico de Impresión 3D

skinparam classAttributeIconSize 0
skinparam linetype ortho
skinparam backgroundColor #FEFEFE
skinparam shadowing false

' === ENUMS ===
enum Rol {
    Administrador
    Solicitante
}

enum EstadoRecurso {
    Activo
    Inactivo
}

enum EstadoPedido {
    Pendiente
    Aprobado
    En impresión
    Completado
    Rechazado
}

' === CLASES DEL DOMINIO ===
class User <<SoftDeletes>> {
    +id : bigint <<PK>>
    +name : string(100)
    +email : string <<UQ>>
    +email_verified_at : datetime?
    +password : string <<hashed>>
    +rol : Rol = Solicitante
    +foto_perfil : string?
    +remember_token : string?
    +created_at : timestamp?
    +updated_at : timestamp?
    +deleted_at : timestamp?
    --
    +casts() : array
}

class Institucion <<SoftDeletes>> {
    +id : bigint <<PK>>
    +nombre : string(100)
    +direccion : string(200)
    +telefono : string(30)
    +director : string?
    +logo : string?
    +documento_pdf : string?
    +created_at : timestamp?
    +updated_at : timestamp?
    +deleted_at : timestamp?
}

class Recurso <<SoftDeletes>> {
    +id : bigint <<PK>>
    +titulo : string(150)
    +descripcion : text
    +gramos_pla : decimal(8,2)
    +tiempo_minutos : integer
    +url_imagen : string?
    +url_gcode : string?
    +estado : EstadoRecurso
    +categoria_id : bigint <<FK>>?
    +created_at : timestamp?
    +updated_at : timestamp?
    +deleted_at : timestamp?
}

class Categoria {
    +id : bigint <<PK>>
    +nombre : string
    +descripcion : text?
    +created_at : timestamp?
    +updated_at : timestamp?
}

class Pedido <<SoftDeletes>> {
    +id : bigint <<PK>>
    +user_id : bigint <<FK>>
    +institucion_id : bigint <<FK>>
    +estado : EstadoPedido = Pendiente
    +fecha_solicitud : date
    +total_gramos_pla : decimal(8,2)
    +costo_total : decimal(8,2)
    +gcode_path : string?
    +motivo_rechazo : text?
    +created_at : timestamp?
    +updated_at : timestamp?
    +deleted_at : timestamp?
}

class DetallePedido {
    +id : bigint <<PK>>
    +pedido_id : bigint <<FK>>
    +recurso_id : bigint <<FK>>
    +cantidad : integer
    +gramos_pla : decimal(8,2)
    +costo_unitario : decimal(8,2)
    +created_at : timestamp?
    +updated_at : timestamp?
}

class ConfiguracionSistema {
    +id : bigint <<PK>>
    +clave : string <<UQ>>
    +valor : string
    +descripcion : string?
    +created_at : timestamp?
    +updated_at : timestamp?
}

' === RELACIONES DE ASOCIACIÓN ===
User "1" -- "*" Pedido : user_id
Institucion "1" -- "*" Pedido : institucion_id
Pedido "1" -- "*" DetallePedido : pedido_id
Recurso "1" -- "*" DetallePedido : recurso_id
Recurso "*" -- "1" Categoria : categoria_id

' === ASOCIACIONES DE ENUMS ===
User --> Rol
Recurso --> EstadoRecurso
Pedido --> EstadoPedido
Pedido --> ConfiguracionSistema : obtiene precio_gramo_pla

@enduml
